--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Background-generator</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello Github</h1>
     <p>Nice day!</p>
 </body>
 </html>
